--- a/Linear Regression Single Variable Task Estimates.ipynb
+++ b/Linear Regression Single Variable Task Estimates.ipynb
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x10b65e240>"
+       "<matplotlib.collections.PathCollection at 0x1a18416940>"
       ]
      },
      "execution_count": 3,
@@ -230,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a174c7358>]"
+       "[<matplotlib.lines.Line2D at 0x1a18485780>]"
       ]
      },
      "execution_count": 9,
@@ -344,27 +344,6 @@
     "# Export prediction\n",
     "d.to_csv(\"prediction.csv\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
